package aimene.doex.bestelling.repository;

import aimene.doex.bestelling.model.Product;
import org.springframework.data.repository.CrudRepository;

public interface ProductRepository extends CrudRepository<Product, Integer> {


}
